Mobile Responsive (i think)
- Made Home page mobile responsive
- Tried adding film strip to gallery - might remove if I don't have time to sort styling
- Sacked bootstrap off

--- a/Gallery.html
+++ b/Gallery.html
@@ -51,7 +51,7 @@
                   role="button"
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
-                  >Explore
+                  >EXPLORE
                 </a>
 
                 <ul class="dropdown-menu">
@@ -70,11 +70,16 @@
       </nav>
     </div>
   </header>
-
+  <div class="film">
+  <img src="Images/filmstrip.png" height="200em">
+  <img src="Images/filmstrip.png" height="200em">
+  <img src="Images/filmstrip.png" height="200em">
+  <img src="Images/filmstrip.png" height="200em">
+  </div>
   <div class="container">
     <div class="row justify-content-center">
       <div class="Gallery">
-        <img src="Gallery/Gallery transparent.png" alt="Gallery" width="40%">
+        <img src="Gallery/Gallery transparent.png" alt="Gallery" width="30%">
         </div>
       </div>
       <div class="centered-carousel">
@@ -114,13 +119,10 @@
                 <img src="Gallery/Rainbow lasers..jpg" class="d-block w-100" alt="Image 10">
               </div>
               <div class="carousel-item">
-                <img src="Gallery/Rainbow lasers..jpg" class="d-block w-100" alt="Image 11">
+                <img src="Gallery/Red lasers..jpg" class="d-block w-100" alt="Image 11">
               </div>
               <div class="carousel-item">
-                <img src="Gallery/Red lasers..jpg" class="d-block w-100" alt="Image 12">
-              </div>
-              <div class="carousel-item">
-                <img src="Gallery/Woman and girl..jpg" class="d-block w-100" alt="Image 13">
+                <img src="Gallery/Woman and girl..jpg" class="d-block w-100" alt="Image 12">
               </div>
           </div>
           <a class="carousel-control-prev" href="#myCarousel" role="button" data-bs-slide="prev">
@@ -134,13 +136,10 @@
         </div>
       </div>
       <div Class="Year-Date">
-      <p>AMPLIFY FESTIVAL 2023</p>
-    </div>
+      <p>- AMPLIFY FESTIVAL 2023 -</p>
+      </div>
     </div>
   </div>
-
-
-
   <!-- Footer -->
   <footer class="text-center text-white" style="background-color: #d4589e">
     <!-- Grid container -->
