--- a/index.html
+++ b/index.html
@@ -86,50 +86,51 @@
   </div>
 
   <!-- FEATURED IMAGE -->
-  <img src="Images/Amplify Fest Hero-min.png" width="100%" height="100%" alt="Amplify Fest Colour Canons">
+  <img src="Images/Amplify Fest Hero-min.png"  alt="Amplify Fest Colour Canons">
   </div>
 
   <!-- LINEUP -->
-  <div class="container">
-    <div class="The-Lineup">
-      <div class="row text-center">
-        <div class="col-md-12">
-          <img src="Images/HEADLINERS DIVIDERS.png" width="80%"> 
-      </div>
-      </div>
+    <div class="Headliners-Title">
+          <img src="Images/HEADLINERS DIVIDERS.png"> 
+    </div>
     <!-- HEADLINERS -->
-      <div class="Headliners">
-      <div class="row text-center gx-5">
-        <div class="col-md-3">
-          <img src="Images/Amy Housewine.jpg" width="95%" alt="Amy Housewine">
-        </div>
-        <div class="col-md-3">
-          <img src="Images/Snog.jpg" width="95%" alt="Snog">
-        </div>
-        <div class="col-md-3">
-          <img src="Images/Lady Haha.jpg" width="95%" alt="Lady Haha">
-        </div>
-        <div class="col-md-3">
-          <img src="Images/Abba Dabba Doo.jpg" width="95%" alt="Abbda Dabba Doo">
-        </div>
+    <div class="Headliners">
+      <div class="Headliner">
+          <img src="Images/Amy Housewine.jpg" alt="Amy Housewine">
+      </div>
+
+          <div class="Headliner">
+          <img src="Images/Snog.jpg" alt="Snog">
+      </div>
+
+      <div class="Headliner">
+          <img src="Images/Lady Haha.jpg" alt="Lady Haha">
+      </div>
+
+      <div class="Headliner">
+          <img src="Images/Abba Dabba Doo.jpg" alt="Abbda Dabba Doo">
       </div>
     </div>
-  </div>
 
   <!-- Merch -->
   <div class="Merch-Title">
-    <img src="Images/MERCH DIVIDERS.png" width="80%"> 
+    <img src="Images/MERCH DIVIDERS.png"> 
   </div>
   <div class="Merch">
+    <div class="merch-item">
       <img src="Images/Amplify Fest Tote.png" alt="Tote bag">
+    </div>
+    <div class="merch-item">
       <img src="Images/Amplify Fest Tee.png" alt="T-shirt">
+    </div>
+    <div class="merch-item">
       <img src="Images/Amplify Fest Sticker.png" alt="Sticker">
+    </div>
   </div>
 
   <!-- SPONSORS -->
 <div class="Sponsors">
-  <img src="Images/OUR SPONSORS DIVIDERS.png" width="80%"> 
-</div>
+  <img src="Images/OUR SPONSORS DIVIDERS.png"> 
 </div>
 
 <div class="logos">
