--- a/aboutUs.html
+++ b/aboutUs.html
@@ -165,7 +165,14 @@
                   coffee-date (virtual is fine!) to discuss how I can bring a
                   fresh perspective to your project.
                 </p>
-                <div class="btnArea"></div>
+                <div class="btnArea">
+                  <button>
+                    <a
+                      href="https://www.linkedin.com/in/sian-buckley-56234a26a/"
+                      >LinkedIn</a
+                    >
+                  </button>
+                </div>
               </div>
             </div>
           </div>
@@ -190,7 +197,11 @@
                   cup at a time. Join me in this exciting tech expedition, and
                   let's create some code magic together! &#128640; ⭐
                 </p>
-                <div class="btnArea"></div>
+                <div class="btnArea">
+                  <button>
+                    <a href="https://www.linkedin.com/in/ana-mags/">LinkedIn</a>
+                  </button>
+                </div>
               </div>
             </div>
           </div>
@@ -212,7 +223,13 @@
                   learning and secure my first junior developer role!
                 </p>
 
-                <div class="btnArea"></div>
+                <div class="btnArea">
+                  <button>
+                    <a href="https://www.linkedin.com/in/elisa-mcgarry/"
+                      >LinkedIn</a
+                    >
+                  </button>
+                </div>
               </div>
             </div>
           </div>
@@ -238,7 +255,13 @@
                   in spring 2024 and carve out a career in UX/UI as a front-end
                   web developer.
                 </p>
-                <div class="btnArea"></div>
+                <div class="btnArea">
+                  <button>
+                    <a href="https://www.linkedin.com/in/gabriellehuckerby/"
+                      >LinkedIn</a
+                    >
+                  </button>
+                </div>
               </div>
             </div>
           </div>
