--- a/lineup.html
+++ b/lineup.html
@@ -69,6 +69,9 @@
       </header>
 
 <main>
+  <div class="header-font">  
+    <h1>EXPLORE THE GROUNDS</h1>
+  </div> 
     <div class="carousel-container">
     <!-- CAROUSEL -->
     <div id="artist-carousel" class="carousel slide" data-bs-ride="carousel">
@@ -85,28 +88,28 @@
             <div class="carousel-item active">
                 <img src="Images/ladyhaha.jpg" class="d-block w-100" alt="Artist A">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Lady HaHA</h5>
+                    <h4>Lady HaHA</h4>
                     <p>Get ready for a night of laughter and music as this outrageous artist takes the stage!</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="Images/amyhousewine.jpg" class="d-block w-100" alt="Artist B">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Amy House Wine</h5>
+                    <h4>Amy House Wine</h4>
                     <p>Experience the soulful and jazzy vibes of this artist, a perfect blend of fine wine and music.</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="Images/abbadabadoo.jpg" class="d-block w-100" alt="Artist C">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Abba Daba Doo</h5>
+                    <h4>Abba Daba Doo</h4>
                     <p>Dance your heart out to the infectious tunes of this groovy band, it's a daba doo time!</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="Images/snog2.jpg" class="d-block w-100" alt="Artist D">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Snog</h5>
+                    <h4>Snog</h4>
                     <p>Rock out with the wildest and craziest band that's all about love and thundering music.</p>
                 </div>
             </div>
