--- a/lineup.html
+++ b/lineup.html
@@ -70,7 +70,7 @@
 
 <main>
   <div class="header-font">  
-    <h1>EXPLORE THE GROUNDS</h1>
+    <h1>LINE UP</h1>
   </div> 
     <div class="carousel-container">
     <!-- CAROUSEL -->
