changes to styling

--- a/lineup.html
+++ b/lineup.html
@@ -116,6 +116,9 @@
 
     <main>
       <div class="carousel-container">
+        <div>
+          <h1>LINE UP</h1>
+        </div>
         <!-- CAROUSEL -->
         <div
           id="artist-carousel"
