--- a/aboutUs.html
+++ b/aboutUs.html
@@ -153,17 +153,9 @@
               <div class="card-body">
                 <h5 class="card-title">Sian</h5>
                 <p class="card-text">
-                  Hi, I'm Sian &#128075; a secondary school teacher embarking on
-                  an exciting journey into tech - more specifically Web
-                  Development and UX Design. I’ve gained experience in HTML,
-                  CSS, JavaScript, Figma and GitHub and have a strong track
-                  record in designing engaging learning experiences. I’m a
-                  natural empath and am adept at conveying complex ideas in an
-                  easy-to-understand way, as well as having an excellent
-                  understanding of how to develop accessible and inclusive
-                  content for an equitable experience. I'd love to arrange a
-                  coffee-date (virtual is fine!) to discuss how I can bring a
-                  fresh perspective to your project.
+                  Teacher transitioning to Front-End Development/UX Design.
+                  Empathetic and creative with strong communication skills.
+                  Ready for first role in tech!
                 </p>
                 <div class="btnArea">
                   <button>
@@ -186,16 +178,9 @@
               <div class="card-body">
                 <h5 class="card-title">Ana</h5>
                 <p class="card-text">
-                  Hey there, I'm Ana, a cheerful code explorer hailing from the
-                  sunny shores of Portugal, now embracing the UK's charming
-                  Leicester. As a newcomer to the world of coding, I'm embarking
-                  on a journey to become a software engineer. My first course is
-                  just the beginning; I'm gearing up for a four-month intensive
-                  coding adventure. When I'm not immersed in code, I'm a devoted
-                  dog mom, a wanderlust-driven traveler, and a connoisseur of
-                  the art of working in pajamas. Tea is my coding sidekick, one
-                  cup at a time. Join me in this exciting tech expedition, and
-                  let's create some code magic together! &#128640; ⭐
+                  Switching careers to become a developer. Aspiring tech
+                  enthusiast with a passion for learning and creating in the
+                  digital world.
                 </p>
                 <div class="btnArea">
                   <button>
@@ -215,12 +200,8 @@
               <div class="card-body">
                 <h5 class="card-title">Elisa</h5>
                 <p class="card-text">
-                  My name’s Elisa McGarry. I’m a career switcher, moving from
-                  Communications to Coding. I’ve completed CFG’s Web
-                  Development, Javascript and Python courses, and DevOps and
-                  Career Development MOOCS. This project has taught me about the
-                  power of teamwork, Github and CSS. I can't wait to build on my
-                  learning and secure my first junior developer role!
+                  Career switcher, moving from Communications to Coding. Looking
+                  for my first Junior Frontend Developer role.
                 </p>
 
                 <div class="btnArea">
@@ -243,17 +224,9 @@
               <div class="card-body">
                 <h5 class="card-title">Gabrielle</h5>
                 <p class="card-text">
-                  Hiya, I'm Gabrielle, and my tech-inspired journey started with
-                  humble beginnings as an avid pre-teen tumblr enthusiast. These
-                  days, I work in-house as an SEO and marketing specialist,
-                  where I optimise and create content for a franchise of over 60
-                  sites. I'm thrilled to now be able to apply my newfound web
-                  development skills in my current projects – building a
-                  corporate internal comms site and Woocommerce store. I'm an
-                  ambitious and creative soul with an insatiable hunger for
-                  learning. My ultimate goal? To enroll in CFG's degree program
-                  in spring 2024 and carve out a career in UX/UI as a front-end
-                  web developer.
+                  Former Tumblr enthusiast turned SEO and Marketing Specialist.
+                  An ambitious, creative soul pursuing a career in front-end web
+                  dev.
                 </p>
                 <div class="btnArea">
                   <button>
