Responsivity & Gallery Footer
- Made Home page Mobile Responsive
- Changed Gallery footer colour

--- a/Gallery.html
+++ b/Gallery.html
@@ -141,7 +141,7 @@
     </div>
   </div>
   <!-- Footer -->
-  <footer class="text-center text-white" style="background-color: #d4589e">
+  <footer class="text-center text-white" style="background-color: #ff66c4">
     <!-- Grid container -->
     <div class="container">
       <!-- Section: Links -->
@@ -217,7 +217,7 @@
     </div>
     <!-- Section: Social -->
     <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: #d4589e">
+    <div class="text-center p-3" style="background-color: #ff66c4">
       © 2020 Copyright: Team B
     </div>
   </footer>
