Changing lower case spelling in Nav
Making nav consistent across pages

--- a/lineup.html
+++ b/lineup.html
@@ -78,7 +78,7 @@
                     role="button"
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
-                    >Explore
+                    >EXPLORE
                   </a>
 
                   <ul class="dropdown-menu">
