--- a/aboutUs.html
+++ b/aboutUs.html
@@ -56,14 +56,14 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html">Home</a>
+                  <a class="nav-link" href="index.html">HOME</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="form.html">Pre-Sale</a>
+                  <a class="nav-link" href="form.html">PRE-SALE</a>
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="lineup.html">Line Up</a>
+                  <a class="nav-link" href="lineup.html">LINE UP</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a
