--- a/FAQsPage.html
+++ b/FAQsPage.html
@@ -112,12 +112,13 @@
       </div>
     </header>
     <main>
-      <div class="container">
+      <div class="container2">
         <img
           src="Images/Campsite.jpeg"
           alt="colourful campsite forest"
           class="campsiteImg"
           width="100%"
+          height="auto"
         />
 
         <div class="text-block">
