--- a/FAQsPage.html
+++ b/FAQsPage.html
@@ -174,7 +174,7 @@
         <p>
           You can bring food and drink to the campsite but not into the arena.
           We've got a range of food and drinks vendors, including loads of vegan
-          specials! Check out our list of vendors <a href="#">here</a>.
+          specials! Check out our list of vendors <a href="maintenance.html">here</a>.
         </p>
       </details>
 
